<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:visibility="gone"
        android:id="@+id/mTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome"
        android:textSize="18sp" />

    <ImageView
        android:layout_gravity="center_horizontal"
        android:src="@drawable/temp_app_icon"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_margin="10dp"
            android:id="@+id/email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <EditText
            android:layout_margin="10dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

<TableLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow>
        <Button
            android:layout_weight="1"
            android:id="@+id/btnSingIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:onClick="goToSignIn"
            android:padding="10dp"
            android:text="Sign In"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="goToRegistration"
            android:text="Sign Up"
            android:layout_gravity="center_horizontal" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="OR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <com.facebook.login.widget.LoginButton

           android:layout_marginRight="5dp"
            android:layout_gravity="center"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fb_login_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingBottom="11dp"
            android:paddingTop="11dp"
            facebook:com_facebook_login_text="Sign In" />

        <com.google.android.gms.common.SignInButton
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />

    </TableRow>
</TableLayout>


</LinearLayout>